# NeoWatch

./: .clang-format  .gitignore  BRANCH_SUMMARY.md  CLAUDE.md  CMakeLists.txt  README.md  idf.bat  process_image.py  sdkconfig  sdkconfig.defaults  sdkconfig.esp32  sdkconfig.esp32c6  sdkconfig.esp32s3  sdkconfig.old
docs/: BSP_LCD_Documentation.md  IMPLEMENTATION_PLAN.md  main_c_build_guide.md
docs/architecture/: Project.drawio  SAD.md  SRS.md  button_detect_fsm.pu
docs/config/: sdkconfig_per_target.md
docs/issues/: includepath-squiggles-main-c.md
docs/sdd/system_button/: SDD_System_Button.md
docs/sdd/system_display/: SDD_System_Display.md
docs/sdd/system_manager/: SDD_System_Manager.md  SDD_System_Manager_Recommended.md
docs/sdd/system_network/: SDD_System_Network.md
docs/sdd/system_settings/: SDD_System_Settings.md
docs/sdd/system_ui/: SDD_System_UI.md
docs/style/: coding_style_c.md
hw/neowatch/: fp-info-cache  neowatch.kicad_pcb  neowatch.kicad_prl  neowatch.kicad_pro  neowatch.kicad_sch
main/: CMakeLists.txt  idf_component.yml  lv_conf.h  main.c
source/inc/: main.h  stm32f4xx_it.h
source/inc/bsp/: bsp.h  bsp_button.h  bsp_flash.h  bsp_gpio.h  bsp_i2c.h  bsp_lcd.h  bsp_led.h  bsp_rtc.h  bsp_timer_pwm.h  bsp_touch_button.h  bsp_uart.h
source/inc/common/: base_type.h
source/inc/driver/: drv_button.h  drv_buzzer.h  drv_cjmcu75.h  drv_ds1307.h  drv_gpio.h  drv_led.h  drv_led_rgb.h  drv_ssd1306.h  drv_uart.h
source/inc/middleware/: cbuffer.h  fonts.h  horse_anim.h  icon_clock.h  snake_game.h  table_music.h  video_frame.h
source/inc/system/: system_button.h  system_data.h  system_diagnostic.h  system_display.h  system_game.h  system_manager.h  system_manager_events.h  system_pc_control.h  system_settings.h  system_time.h  system_ui.h
source/src/bsp/: bsp.c  bsp_button.c  bsp_flash.c  bsp_gpio.c  bsp_i2c.c  bsp_lcd.c  bsp_led.c  bsp_rtc.c  bsp_timer_pwm.c  bsp_touch_button.c  bsp_uart.c
source/src/driver/: drv_button.c  drv_buzzer.c  drv_cjmcu75.c  drv_ds1307.c  drv_gpio.c  drv_led.c  drv_led_rgb.c  drv_ssd1306.c  drv_uart.c
source/src/middleware/: cbuffer.c  fonts.c  icon_clock.c  snake_game.c  video_frame.c
source/src/system/: system_button.c  system_data.c  system_diagnostic.c  system_display.c  system_game.c  system_manager.c  system_pc_control.c  system_settings.c  system_time.c  system_ui.c
ui/: SquareLine_Project.sll  SquareLine_Project.spj
ui/export/c/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_img_cat_mini_png.c  ui_img_snake_game_logo_png.c  ui_img_snake_game_start_png.c
